--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,44 +4,50 @@
   ansible.builtin.debug:
     msg: "wares.admin.awx v0.01"
 
-- name: Install required packages
-  ansible.builtin.apt:
-    pkg:
-    - git
-    - vim
-    - build-essential
-    - apparmor
-    - apparmor-utils
-    - curl
-    - jq
-    state: latest
-    update_cache: yes
-    cache_valid_time: 3600
+# - name: Install required packages
+#   ansible.builtin.apt:
+#     pkg:
+#     - git
+#     - vim
+#     - build-essential
+#     - apparmor
+#     - apparmor-utils
+#     - curl
+#     - jq
+#     state: latest
+#     update_cache: yes
+#     cache_valid_time: 3600
 
-- name: Install K3s Kubernetes
-  ansible.builtin.shell:
-    chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: curl -sfL https://get.k3s.io | bash -s - --write-kubeconfig-mode 644
+# - name: Install K3s Kubernetes
+#   ansible.builtin.shell:
+#     chdir: "{{ wares_admin_awx_tempdir }}"
+#     cmd: curl -sfL https://get.k3s.io | bash -s - --write-kubeconfig-mode 644
 
-- name: Display nodes
-  ansible.builtin.shell:
-    cmd: kubectl get nodes
-  register: kubectl_res
-- debug: var=kubectl_res
+# - name: Display nodes
+#   ansible.builtin.shell:
+#     cmd: kubectl get nodes
+#   register: kubectl_res
+# - debug: var=kubectl_res
+
+# - name: Install Kustomize
+#   ansible.builtin.shell:
+#     chdir: "{{ wares_admin_awx_tempdir }}"
+#     cmd: curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
+
+# - name: Move Kustomize
+#   ansible.builtin.shell:
+#     chdir: "{{ wares_admin_awx_tempdir }}"
+#     cmd: mv kustomize /usr/local/bin
+
+# - name: Display Kustomize version
+#   ansible.builtin.shell:
+#     cmd: kustomize version
+#   register: kustomizeversion_res
+# - debug: var=kustomizeversion_res
 
 - name: Install Kustomize
   ansible.builtin.shell:
     chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
-
-- name: Move Kustomize
-  ansible.builtin.shell:
-    chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: mv kustomize /usr/local/bin
-
-- name: Display Kustomize version
-  ansible.builtin.shell:
-    cmd: kustomize version
-  register: kustomizeversion_res
-- debug: var=kustomizeversion_res
-
+    cmd: curl -s https://api.github.com/repos/ansible/awx-operator/releases/latest | grep tag_name | cut -d '"' -f 4
+  register: RELEASE_TAG
+- debug: var=RELEASE_TAG
