--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,4 +50,14 @@
     chdir: "{{ wares_admin_awx_tempdir }}"
     cmd: curl -s https://api.github.com/repos/ansible/awx-operator/releases/latest | grep tag_name | cut -d '"' -f 4
   register: RELEASE_TAG
-- debug: var=RELEASE_TAG
+- debug: var=RELEASE_TAG.stdout
+
+- name: Template kustomization.yaml
+  ansible.builtin.template:
+    src: kustomization.yaml
+    dest: "{{ wares_admin_awx_tempdir }}/kustomization.yaml"
+
+- name: Install manifests
+  ansible.builtin.shell:
+    cmd: kustomize build . | kubectl apply -f -
+
