--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,7 +48,8 @@
 - name: Install Kustomize
   ansible.builtin.shell:
     chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: curl -s https://api.github.com/repos/ansible/awx-operator/releases/latest | grep tag_name | cut -d '"' -f 4
+    cmd: |
+      curl -s https://api.github.com/repos/ansible/awx-operator/releases/latest | grep tag_name | cut -d '"' -f 4
   register: RELEASE_TAG
 - debug: var=RELEASE_TAG.stdout
 
