--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,7 +11,7 @@
     pkg:
     - ansible
     - nodejs
-    # - npm
+    - npm
     - python3-pip
     - git
     - pwgen
@@ -67,16 +67,23 @@
   register: docker_compose_version
 - debug: var=docker_compose_version.stdout
 
-- name: Get nvm
-  ansible.builtin.shell:
-    chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash
+- name: Download Awx source
+  ansible.builtin.unarchive:
+    src: "{{ wares_admin_awx_source_url }}"
+    dest: "{{ wares_admin_awx_tempdir }}"
+    remote_src: yes
 
-- name: Install nvm
+- name: Get Docker compose
   ansible.builtin.shell:
-    chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: nvm install {{ wares_admin_awx_nvm_version }}
+    chdir: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/"
+    cmd: pwgen -N 1 -s 30
+  register: wares_admin_awx_secretkey
+- debug: var=wares_admin_awx_secretkey.stdout
 
+- name: Template inventory
+  ansible.builtin.template:
+    src: inventory.j2
+    dest: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/inventory"
 
 # - name: Npm error resolution
 #   ansible.builtin.debug:
