--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,3 +2,4 @@
 # vars file for wares.admin.awx
 wares_admin_awx_tempdir: /var/tmp
 wares_admin_awx_nvm_version: 12.6.0
+wares_admin_awx_source_url: "https://github.com/ansible/awx/archive/17.1.0.zip"
