--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -85,6 +85,12 @@
     src: inventory.j2
     dest: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/inventory"
 
+- name: Run AWX installation playbook
+  ansible.builtin.shell:
+    chdir: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/"
+    cmd: ansible-playbook -i inventory install.yml
+
+
 # - name: Npm error resolution
 #   ansible.builtin.debug:
 #     msg: |
