--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,150 +4,98 @@
 
 - name: Debug
   ansible.builtin.debug:
-    msg: "wares.admin.awx v0.02"
+    msg: "wares.admin.awx v0.03"
 
-- name: Install required packages
-  ansible.builtin.apt:
-    pkg:
-    - ansible
-    - nodejs
-    - npm
-    - python3-pip
-    - git
-    - pwgen
-    - wget
-    - unzip
-    - apt-transport-https
-    - ca-certificates
-    - software-properties-common
-    - gnupg2
-    - curl
-    - python3-pip
-    - git
-    state: latest
-    update_cache: yes
-    cache_valid_time: 3600
+# - name: Install required packages
+#   ansible.builtin.apt:
+#     pkg:
+#     - nodejs
+#     - npm
+#     - python3-pip
+#     - git
+#     - pwgen
+#     - wget
+#     - unzip
+#     - apt-transport-https
+#     - ca-certificates
+#     - software-properties-common
+#     - gnupg2
+#     - curl
+#     - python3-pip
+#     - git
+#     state: latest
+#     update_cache: yes
+#     cache_valid_time: 3600
 
-- name: Add Docker key
-  ansible.builtin.shell:
-    chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+# - name: Add Docker key
+#   ansible.builtin.shell:
+#     chdir: "{{ wares_admin_awx_tempdir }}"
+#     cmd: curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
 
-- name: Get release name
-  ansible.builtin.shell:
-    cmd: lsb_release -cs
-  register: RELEASE_NAME
-- debug: var=RELEASE_NAME.stdout
+# - name: Get release name
+#   ansible.builtin.shell:
+#     cmd: lsb_release -cs
+#   register: RELEASE_NAME
+# - debug: var=RELEASE_NAME.stdout
 
-- name: Add specified repository into sources list
+# - name: Add Docker repository into sources list
+#   ansible.builtin.apt_repository:
+#     repo: "deb https://download.docker.com/linux/debian {{ RELEASE_NAME.stdout }} stable"
+#     state: present
+
+# - name: Update apt cache and install Docker ce
+#   ansible.builtin.apt:
+#     update_cache: yes
+#     pkg: docker-ce
+
+# - name: Get Docker compose
+#   ansible.builtin.shell:
+#     chdir: "{{ wares_admin_awx_tempdir }}"
+#     cmd: curl -s https://api.github.com/repos/docker/compose/releases/latest | grep browser_download_url | grep docker-compose-linux-x86_64 | cut -d '"' -f 4 | wget -qi -
+
+# - name: Move Docker compose
+#   ansible.builtin.shell:
+#     chdir: "{{ wares_admin_awx_tempdir }}"
+#     cmd: |
+#       chmod +x docker-compose-Linux-x86_64
+#       mv docker-compose-linux-x86_64 /usr/local/bin/docker-compose
+
+# - name: Get Docker compose version (debug)
+#   ansible.builtin.shell:
+#     cmd: docker-compose version
+#   register: docker_compose_version
+# - debug: var=docker_compose_version.stdout
+
+# - name: Download Awx source
+#   ansible.builtin.unarchive:
+#     src: "{{ wares_admin_awx_source_url }}"
+#     dest: "{{ wares_admin_awx_tempdir }}"
+#     remote_src: yes
+
+# - name: Generate key
+#   ansible.builtin.shell:
+#     chdir: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/"
+#     cmd: pwgen -N 1 -s 30
+#   register: wares_admin_awx_secretkey
+# - debug: var=wares_admin_awx_secretkey.stdout
+
+# - name: Template inventory
+#   ansible.builtin.template:
+#     src: inventory.j2
+#     dest: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/inventory"
+
+- name: Add Ansible repository into sources list
   ansible.builtin.apt_repository:
-    repo: "deb https://download.docker.com/linux/debian {{ RELEASE_NAME.stdout }} stable"
+    repo: "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main"
     state: present
 
-- name: Update apt cache and install Docker ce
+- name: Update cache and Install latest Ansible version
   ansible.builtin.apt:
+    name: ansible
+    state: latest
     update_cache: yes
-    pkg: docker-ce
-
-- name: Get Docker compose
-  ansible.builtin.shell:
-    chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: curl -s https://api.github.com/repos/docker/compose/releases/latest | grep browser_download_url | grep docker-compose-linux-x86_64 | cut -d '"' -f 4 | wget -qi -
-
-- name: Move Docker compose
-  ansible.builtin.shell:
-    chdir: "{{ wares_admin_awx_tempdir }}"
-    cmd: |
-      chmod +x docker-compose-Linux-x86_64
-      mv docker-compose-linux-x86_64 /usr/local/bin/docker-compose
-
-- name: Get Docker compose version (debug)
-  ansible.builtin.shell:
-    cmd: docker-compose version
-  register: docker_compose_version
-- debug: var=docker_compose_version.stdout
-
-- name: Download Awx source
-  ansible.builtin.unarchive:
-    src: "{{ wares_admin_awx_source_url }}"
-    dest: "{{ wares_admin_awx_tempdir }}"
-    remote_src: yes
-
-- name: Get Docker compose
-  ansible.builtin.shell:
-    chdir: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/"
-    cmd: pwgen -N 1 -s 30
-  register: wares_admin_awx_secretkey
-- debug: var=wares_admin_awx_secretkey.stdout
-
-- name: Template inventory
-  ansible.builtin.template:
-    src: inventory.j2
-    dest: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/inventory"
 
 - name: Run AWX installation playbook
   ansible.builtin.shell:
     chdir: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/"
     cmd: ansible-playbook -i inventory install.yml
-
-
-# - name: Npm error resolution
-#   ansible.builtin.debug:
-#     msg: |
-#       An error was encountered during npm installation. Maybe you should try following then run installation playbook again :
-#       npm cache clean -f
-#       npm -g uninstall npm
-#   failed_when: install_npm_res is failed
-#   when: install_npm_res is failed
-
-# - name: Install Docker Compose Python module
-#   ansible.builtin.pip:
-#     name: docker-compose==1.28.5
-
-
-# - name: Display nodes
-#   ansible.builtin.shell:
-#     cmd: kubectl get nodes
-#   register: kubectl_res
-# - debug: var=kubectl_res
-
-# - name: Install Kustomize
-#   ansible.builtin.shell:
-#     chdir: "{{ wares_admin_awx_tempdir }}"
-#     cmd: curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
-
-# - name: Move Kustomize
-#   ansible.builtin.shell:
-#     chdir: "{{ wares_admin_awx_tempdir }}"
-#     cmd: mv kustomize /usr/local/bin
-
-# - name: Display Kustomize version
-#   ansible.builtin.shell:
-#     cmd: kustomize version
-#   register: kustomizeversion_res
-# - debug: var=kustomizeversion_res
-
-# - name: Install Kustomize
-#   ansible.builtin.shell:
-#     chdir: "{{ wares_admin_awx_tempdir }}"
-#     cmd: |
-#       curl -s https://api.github.com/repos/ansible/awx-operator/releases/latest | grep tag_name | cut -d '"' -f 4
-#   register: RELEASE_TAG
-# - debug: var=RELEASE_TAG.stdout
-
-# - name: Template kustomization.yaml
-#   ansible.builtin.template:
-#     src: kustomization.yaml
-#     dest: "{{ wares_admin_awx_tempdir }}/kustomization.yaml"
-
-# - name: Install manifests
-#   ansible.builtin.shell:
-#     chdir: "{{ wares_admin_awx_tempdir }}"
-#     cmd: kustomize build . | kubectl apply -f -
-
-# - name: Run expect to wait for a successful PXE boot via out-of-band CIMC
-#   ansible.builtin.shell: |
-#     export NAMESPACE=awx
-#     kubectl config set-context --current --namespace=$NAMESPACE
-
-# # Abandon pour le moment : crashloopback en suivant ce guide : https://computingforgeeks.com/how-to-install-ansible-awx-on-debian-buster/?expand_article=1
