--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,10 +79,10 @@
 #   register: wares_admin_awx_secretkey
 # - debug: var=wares_admin_awx_secretkey.stdout
 
-# - name: Template inventory
-#   ansible.builtin.template:
-#     src: inventory.j2
-#     dest: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/inventory"
+- name: Template inventory
+  ansible.builtin.template:
+    src: inventory.j2
+    dest: "{{ wares_admin_awx_tempdir }}/awx-17.1.0/installer/inventory"
 
 - name: Add key for Ansible repository
   ansible.builtin.shell:
