--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,11 +21,14 @@
     - software-properties-common
     - gnupg2
     - curl
-    - python3-pip
     - git
     state: latest
     update_cache: yes
     cache_valid_time: 3600
+
+- name: Install Docker SDK for Python
+  ansible.builtin.pip:
+    name: docker
 
 - name: Add Docker key
   ansible.builtin.shell:
